[gd_scene load_steps=76 format=2]

[ext_resource path="res://Enemies/RockMonster.gd" type="Script" id=1]
[ext_resource path="res://Enemies/ball.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Sight.gd" type="Script" id=3]
[ext_resource path="res://Enemies/SoftCollision.gd" type="Script" id=4]
[ext_resource path="res://Overlap Detection/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Environment Effects/Blink.gdshader" type="Shader" id=7]
[ext_resource path="res://Sounds/death_sound.tres" type="AudioStream" id=8]
[ext_resource path="res://Shadows/7p shadow.png" type="Texture" id=9]

[sub_resource type="ShaderMaterial" id=27]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/active = false

[sub_resource type="Animation" id=30]
resource_name = "AtackRight"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=31]
resource_name = "AttackDown"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=32]
resource_name = "AttackDownLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=98]
resource_name = "AttackFinished"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=33]
resource_name = "AttackLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=34]
resource_name = "AttackLeftUp"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=35]
resource_name = "AttackRightDown"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}

[sub_resource type="Animation" id=36]
resource_name = "AttackUp"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=37]
resource_name = "AttackUpRight"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=40]
resource_name = "IdleDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=41]
resource_name = "IdleDownLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=42]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=43]
resource_name = "IdleLeftUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=44]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=45]
resource_name = "IdleRightDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=46]
resource_name = "IdleUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=47]
resource_name = "IdleUpRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=38]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=39]
resource_name = "RollDown"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=48]
resource_name = "RollDownLeft"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31, 32, 24 ]
}

[sub_resource type="Animation" id=49]
resource_name = "RollLeft"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37, 38, 39, 40 ]
}

[sub_resource type="Animation" id=50]
resource_name = "RollLeftUp"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 42, 43, 44, 45, 46, 47, 48 ]
}

[sub_resource type="Animation" id=51]
resource_name = "RollRight"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 65, 66, 67, 68, 69, 70 ]
}

[sub_resource type="Animation" id=52]
resource_name = "RollRightDown"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 73, 74, 75, 76, 77, 78, 81 ]
}

[sub_resource type="Animation" id=53]
resource_name = "RollUp"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 51, 52, 53, 54, 55, 56 ]
}

[sub_resource type="Animation" id=54]
resource_name = "RollUpRight"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 58, 59, 60, 61, 62, 64 ]
}

[sub_resource type="AnimationNodeAnimation" id=55]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "AttackDownLeft"

[sub_resource type="AnimationNodeAnimation" id=57]
animation = "AtackRight"

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "AttackUp"

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "AttackUpRight"

[sub_resource type="AnimationNodeAnimation" id=60]
animation = "AttackLeftUp"

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "AttackDownLeft"

[sub_resource type="AnimationNodeAnimation" id=62]
animation = "AttackRightDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=63]
blend_point_0/node = SubResource( 55 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 56 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 57 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 58 )
blend_point_3/pos = Vector2( 0, -1 )
blend_point_4/node = SubResource( 59 )
blend_point_4/pos = Vector2( 0.5, -0.5 )
blend_point_5/node = SubResource( 60 )
blend_point_5/pos = Vector2( -0.5, -0.5 )
blend_point_6/node = SubResource( 61 )
blend_point_6/pos = Vector2( -0.5, 0.5 )
blend_point_7/node = SubResource( 62 )
blend_point_7/pos = Vector2( 0.5, 0.5 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=64]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=65]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=66]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "IdleDownLeft"

[sub_resource type="AnimationNodeAnimation" id=69]
animation = "IdleRightDown"

[sub_resource type="AnimationNodeAnimation" id=70]
animation = "IdleUpRight"

[sub_resource type="AnimationNodeAnimation" id=71]
animation = "IdleLeftUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=72]
blend_point_0/node = SubResource( 64 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 65 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 66 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 67 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 68 )
blend_point_4/pos = Vector2( -0.5, 0.5 )
blend_point_5/node = SubResource( 69 )
blend_point_5/pos = Vector2( 0.5, 0.5 )
blend_point_6/node = SubResource( 70 )
blend_point_6/pos = Vector2( 0.5, -0.5 )
blend_point_7/node = SubResource( 71 )
blend_point_7/pos = Vector2( -0.5, -0.5 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=86]
animation = "RollDown"

[sub_resource type="AnimationNodeAnimation" id=87]
animation = "RollUp"

[sub_resource type="AnimationNodeAnimation" id=88]
animation = "RollLeft"

[sub_resource type="AnimationNodeAnimation" id=89]
animation = "RollRight"

[sub_resource type="AnimationNodeAnimation" id=90]
animation = "RollUpRight"

[sub_resource type="AnimationNodeAnimation" id=91]
animation = "RollLeftUp"

[sub_resource type="AnimationNodeAnimation" id=92]
animation = "RollDownLeft"

[sub_resource type="AnimationNodeAnimation" id=93]
animation = "RollRightDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=94]
auto_triangles = false
blend_point_0/node = SubResource( 86 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 87 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 88 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 89 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 90 )
blend_point_4/pos = Vector2( 0.5, -0.5 )
blend_point_5/node = SubResource( 91 )
blend_point_5/pos = Vector2( -0.5, -0.5 )
blend_point_6/node = SubResource( 92 )
blend_point_6/pos = Vector2( -0.5, 0.5 )
blend_point_7/node = SubResource( 93 )
blend_point_7/pos = Vector2( 0.5, 0.5 )
triangles = PoolIntArray( 1, 4, 5, 2, 5, 6, 0, 6, 7, 3, 4, 7, 4, 5, 7, 5, 6, 7 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=84]

[sub_resource type="AnimationNodeStateMachineTransition" id=95]

[sub_resource type="AnimationNodeStateMachineTransition" id=96]

[sub_resource type="AnimationNodeStateMachineTransition" id=99]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=19]
states/Attack/node = SubResource( 63 )
states/Attack/position = Vector2( 282, 77 )
states/Idle/node = SubResource( 72 )
states/Idle/position = Vector2( 104, 77 )
states/Roll/node = SubResource( 94 )
states/Roll/position = Vector2( 104, 155.032 )
transitions = [ "Idle", "Attack", SubResource( 84 ), "Idle", "Roll", SubResource( 95 ), "Roll", "Idle", SubResource( 96 ), "Attack", "Idle", SubResource( 99 ) ]
start_node = "Idle"
graph_offset = Vector2( -139, 34.032 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=20]

[sub_resource type="CircleShape2D" id=21]
radius = 5.0

[sub_resource type="CircleShape2D" id=22]
radius = 96.1873

[sub_resource type="CircleShape2D" id=97]
radius = 44.0

[sub_resource type="CircleShape2D" id=23]
radius = 6.08276

[sub_resource type="CircleShape2D" id=100]
radius = 3.0

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=29]
resource_name = "play"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Ball" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="7pShadow" type="Sprite" parent="."]
position = Vector2( -0.479721, 2.62837 )
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 27 )
position = Vector2( -1, 0 )
texture = ExtResource( 2 )
hframes = 83

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/AtackRight = SubResource( 30 )
anims/AttackDown = SubResource( 31 )
anims/AttackDownLeft = SubResource( 32 )
anims/AttackFinished = SubResource( 98 )
anims/AttackLeft = SubResource( 33 )
anims/AttackLeftUp = SubResource( 34 )
anims/AttackRightDown = SubResource( 35 )
anims/AttackUp = SubResource( 36 )
anims/AttackUpRight = SubResource( 37 )
anims/IdleDown = SubResource( 40 )
anims/IdleDownLeft = SubResource( 41 )
anims/IdleLeft = SubResource( 42 )
anims/IdleLeftUp = SubResource( 43 )
anims/IdleRight = SubResource( 44 )
anims/IdleRightDown = SubResource( 45 )
anims/IdleUp = SubResource( 46 )
anims/IdleUpRight = SubResource( 47 )
anims/RESET = SubResource( 38 )
anims/RollDown = SubResource( 39 )
anims/RollDownLeft = SubResource( 48 )
anims/RollLeft = SubResource( 49 )
anims/RollLeftUp = SubResource( 50 )
anims/RollRight = SubResource( 51 )
anims/RollRightDown = SubResource( 52 )
anims/RollUp = SubResource( 53 )
anims/RollUpRight = SubResource( 54 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 19 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 20 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Roll/blend_position = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 21 )

[node name="StateTimer" type="Timer" parent="."]
one_shot = true

[node name="Sight" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.0901961 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
show_behind_parent = true
position = Vector2( 1, 0 )
shape = SubResource( 22 )

[node name="AttackRange" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.0901961 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
show_behind_parent = true
position = Vector2( 1, 0 )
shape = SubResource( 97 )

[node name="SoftCollision" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 24 )
collision_layer = 256
collision_mask = 256
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision"]
visible = false
shape = SubResource( 23 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_layer = 8
collision_mask = 64
shape = SubResource( 100 )

[node name="Blink" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 28 )
anims/play = SubResource( 29 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="AttackStateTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="area_entered" from="Sight" to="." method="_on_Sight_area_entered"]
[connection signal="area_entered" from="Sight" to="Sight" method="_on_Sight_area_entered"]
[connection signal="area_exited" from="Sight" to="." method="_on_Sight_area_exited"]
[connection signal="area_entered" from="AttackRange" to="." method="_on_AttackRange_area_entered"]
[connection signal="area_entered" from="AttackRange" to="AttackRange" method="_on_AttackRange_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]
[connection signal="timeout" from="AttackStateTimer" to="." method="_on_AttackStateTimer_timeout"]
